# publisher

./: .gitignore  Cargo.toml  README.md  sample.env  sqlx-data.json  temporal.sql
migrations/: 20220217074147_days.down.sql  20220217074147_days.up.sql  20220218074147_insert_days.down.sql  20220218074147_insert_days.up.sql  20220222061023_lists.down.sql  20220222061023_lists.up.sql  20220222062455_insert_lists.down.sql  20220222062455_insert_lists.up.sql  20220223051618_videos.down.sql  20220223051618_videos.up.sql  20220223052612_insert_videos.down.sql  20220223052612_insert_videos.up.sql
migrations/2022-02-04-194722_create_days/: up.sql
migrations/2022-02-07-192648_create/: up.sql
migrations/2022-02-09-062103_insert_days/: down.sql  up.sql
src/: day.rs  db.rs  list.rs  main.rs  routes.rs  video.rs
src/db/: day.rs  model_day_list.rs  model_lists.rs  models.rs  schema.rs.2.bak  schema.rs.bak  video.rs
src/db/day/: test_day.rs
src/src/db/: schema.rs
