[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.6"
diesel = { version = "1.4.5", features = ["sqlite", "uuidv07", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = {version = "1.0", feaures = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.19", feaures = ["serde"]}
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
