[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite", "macros"]}
actix-web = "3"
actix-rt = "2.6"
anyhow = "1"
